# mpilib20

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  README.md  meson.build  mpilib20_init_finalise.f90  project-description.md
cmake/: CompilerFlags.cmake  CompilerWarnings.cmake  Documentation.cmake  Doxygen.cmake  FindZofu.cmake  PreprocessorSettings.cmake  StandardProjectSettings.cmake  mpi.cmake  python3.cmake  unit_test_functions.cmake
meson/: meson.md  requirements.txt
python/: make_zofu_driver.py
src/: CMakeLists.txt  main.F90  meson.build  mpi_overload_set.F90  mpilib20.F90  mpilib20_f08_types.mod  mpilib20_init_finalise.F90
src/bindings/: mpi_bindings.F90
src/errors_warnings/: asserts.F90
src/routines/: generic_templates.md  mpilib20_comm_dup.F90  mpilib20_init_finalise.F90  mpilib20_init_finalise.f90  mpilib20_init_finalise_tests.f90  mpilib20_reduce.F90  utils.F90
src/tests/: test_init.f90  test_mpilib20_init.f90  test_mpilib20_init_thread.f90
src/utilities/: bare_utils.F90  internal_utils.F90
test/init/: CMakeLists.txt  test_init.f90
